Very simple: two activites, and a button with intent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Vision Test</string>
+    <string name="visual_acuity_test">Visual Acuity Test</string>
 </resources>
