--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="calibrate">Calibrate</string>
     <string name="contrast_test">Contrast Test</string>
     <string name="start">Start</string>
+    <string name="name">Name</string>
 </resources>
