--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,11 @@
     <string name="start_keyboard">Press SPACE to start</string>
     <string name="name">Name</string>
     <string name="find">Find which side the image is on.\nThe image:</string>
-    <string name="start">Start</string>
     <string name="can_t_see_it">Can\'t see it</string>
     <string name="arrow">arrow</string>
     <string name="color_instructions">Find which side the colored dot is on.</string>
+    <string name="start">Start</string>
+    <string name="start_in_order">Start in order</string>
+    <string name="pick_date">Pick date</string>
+    <string name="choose_specific_test">Choose specific test</string>
 </resources>
